Build with java 8   This is as other distros do   Append --add-exports option to JAVA_OPTS    if java version is greater than 9